--- a/views/pages/artigos/index.ejs
+++ b/views/pages/artigos/index.ejs
@@ -3,7 +3,16 @@
 
 <head>
     <% include ../../partials/head %>
-
+    <!-- NProgress -->
+    <link href="/vendors/nprogress/nprogress.css" rel="stylesheet">
+    <!-- iCheck -->
+    <link href="/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <!-- Datatables -->
+    <link href="/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet">
     <% include ../../partials/post_head %>
 </head>
 
@@ -59,36 +68,36 @@
                 </div>
 
                 <div class="x_content">
-                  <div class="table-responsive">
-                    <table class="table table-striped jambo_table bulk_action">
+
+                  <table id="datatable" class="table table-striped table-bordered bulk_action">
                       <thead>
-                        <tr class="headings">
-                          <th>
+                        <tr>
+                          <!-- <th>
                             <input type="checkbox" id="check-all" class="flat">
-                          </th>
+                          </th> -->
                           <th class="column-title">Código </th>
                           <th class="column-title">Descrição </th>
                           <th class="column-title">STKAtual </th>
-                          <th class="bulk-actions" colspan="7">
-                            <a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>
-                          </th>
+                          <!--<th class="bulk-actions" colspan="7">
+                             <a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>
+                          </th> -->
                         </tr>
                       </thead>
 
                       <tbody>
                         <% artigos.forEach(function(art){ %>
                           <tr>
-                            <td class="a-center ">
+                            <!-- <td class="a-center ">
                               <input type="checkbox" class="flat" name="table_records">
-                            </td>
-                            <td> <%= art.CodArtigo %> </td>
-                            <td> <%= art.DescArtigo %> </td>
+                            </td> -->
+                            <td><a href="/artigos/<%= art.CodArtigo %>"><%= art.CodArtigo %></a></td>
+                            <td><a href="/artigos/<%= art.CodArtigo %>"><%= art.DescArtigo %></a></td>
                             <td> <%= art.STKAtual %> </td>
+							</a>
                           </tr>
                         <% }); %>
                       </tbody>
                     </table>
-                  </div>
                 </div>
 
               </div>
@@ -117,6 +126,28 @@
 
 <% include ../../partials/footer %>
 
+    <!-- FastClick -->
+    <script src="/vendors/fastclick/lib/fastclick.js"></script>
+    <!-- NProgress -->
+    <script src="/vendors/nprogress/nprogress.js"></script>
+    <!-- iCheck -->
+    <script src="/vendors/iCheck/icheck.min.js"></script>
+    <!-- Datatables -->
+    <script src="/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/buttons.flash.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js"></script>
+    <script src="/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
+    <script src="/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
+    <script src="/vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
+    <script src="/vendors/jszip/dist/jszip.min.js"></script>
+    <script src="/vendors/pdfmake/build/pdfmake.min.js"></script>
+    <script src="/vendors/pdfmake/build/vfs_fonts.js"></script>
 <% include ../../partials/post_footer %>
 </body>
 
