login working fine with api, artigos getting company artigos

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,13 +18,13 @@
             <form method="post" action="/login">
               <h1>360º DASHBOARD</h1>
               <div>
-                <input type="text" name="company" class="form-control" placeholder="Empresa" required="" />
+                <input type="text" name="company" class="form-control" placeholder="Empresa" required="" value="DEMOSINF">
               </div>
               <div>
-                <input type="text" name="user" class="form-control" placeholder="Nome de utilizador" required="" />
+                <input type="text" name="user" class="form-control" placeholder="Nome de utilizador" required="" value="sinf">
               </div>
               <div>
-                <input type="password" name="password" class="form-control" placeholder="Password" required="" />
+                <input type="password" name="password" class="form-control" placeholder="Password" required="" value="sinf">
               </div>
               <div class="form-group">
 				<label for="address">Primavera/API endereço</label>
