--- a/views/pages/fornecedores/index.ejs
+++ b/views/pages/fornecedores/index.ejs
@@ -15,8 +15,93 @@
 
     <!-- page content -->
     <div class="right_col" role="main">
+        <div class="">
+         
+          <div class="page-title">
+            <div class="title_left">
+              <h3>Fornecedores</h3>
+            </div>
 
-    </div>
+            <div class="title_right">
+              <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search for...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Go!</button>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="clearfix"></div>
+
+          <div class="row">       
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="x_panel">
+                
+                <div class="x_title">
+                  <h2>Todos Fornecedores</h2>
+                  <ul class="nav navbar-right panel_toolbox">
+                    <li>
+                      <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Settings 1</a>
+                        </li>
+                        <li><a href="#">Settings 2</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div class="x_content">
+
+                  <table id="datatable" class="table table-striped table-bordered bulk_action">
+                      <thead>
+                        <tr>
+                          <th class="column-title">Código Fornecedor</th>
+                          <th class="column-title">Morada</th>
+                          <th class="column-title">Local</th>
+                          <th class="column-title">CP</th>
+                          <th class="column-title">Telemóvel</th>
+                          <th class="column-title">Dívida</th>
+						  <th class="column-title">Número Contribuinte</th>
+						  <th class="column-title">Modo Pagamento</th>
+						  <th class="column-title">Endereço Web</th>
+						  <th class="column-title">Encomendas Pendentes</th>
+                        </tr>
+                      </thead>
+
+                      <tbody>
+                        <% fornecedores.forEach(function(forn){ %>
+                          <tr>
+                            <td><a href="/fornecedores/<%=forn.CodFornecedor%>"><%= forn.CodFornecedor %></a></td>
+                            <td><%= forn.Morada %></td>
+                            <td><%= forn.Local %></td>
+                            <td><%= forn.Cp %></td>
+                            <td><%= forn.Tel %></td>
+                            <td><%= forn.Divida %></td>
+							<td><%= forn.NumContrib %></td>
+							<td><%= forn.ModoPag %></td>
+							<td><%= forn.EnderecoWeb %></td>
+							<td><%= forn.EncomendasPendentes %></td>
+                          </tr>
+                        <% }); %>
+                      </tbody>
+                    </table>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- /page content -->
 
   </div>
