--- a/views/pages/clientes/index.ejs
+++ b/views/pages/clientes/index.ejs
@@ -15,8 +15,94 @@
 
     <!-- page content -->
     <div class="right_col" role="main">
+        <div class="">
+         
+          <div class="page-title">
+            <div class="title_left">
+              <h3>Clientes</h3>
+            </div>
 
-    </div>
+            <div class="title_right">
+              <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search for...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Go!</button>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="clearfix"></div>
+
+          <div class="row">       
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="x_panel">
+                
+                <div class="x_title">
+                  <h2>Todos Clientes</h2>
+                  <ul class="nav navbar-right panel_toolbox">
+                    <li>
+                      <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Settings 1</a>
+                        </li>
+                        <li><a href="#">Settings 2</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div class="x_content">
+
+                  <table id="datatable" class="table table-striped table-bordered bulk_action">
+                      <thead>
+                        <tr>
+                          <!-- <th>
+                            <input type="checkbox" id="check-all" class="flat">
+                          </th> -->
+                          <th class="column-title">Morada</th>
+                          <th class="column-title">Código Cliente </th>
+                          <th class="column-title">Nome Cliente </th>
+                          <th class="column-title">Número Contribuinte</th>
+                          <th class="column-title">Moeda</th>
+                          <th class="column-title">Email</th>
+                          <!--<th class="bulk-actions" colspan="7">
+                             <a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>
+                          </th> -->
+                        </tr>
+                      </thead>
+
+                      <tbody>
+                        <% clientes.forEach(function(cli){ %>
+                          <tr>
+                            <!-- <td class="a-center ">
+                              <input type="checkbox" class="flat" name="table_records">
+                            </td> -->
+                            <td><%= cli.Morada %></td>
+                            <td><a href="/clientes/<%= cli.CodCliente %>"><%= cli.CodCliente %></a></td>
+                            <td><a href="/clientes/<%= cli.CodCliente %>"><%= cli.NomeCliente %></a></td>
+                            <td><%= cli.NumContribuinte %></td>
+                            <td><%= cli.Moeda %></td>
+                            <td><%= cli.Email %></td>
+                          </tr>
+                        <% }); %>
+                      </tbody>
+                    </table>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- /page content -->
 
   </div>
