--- a/views/pages/vendas/index.ejs
+++ b/views/pages/vendas/index.ejs
@@ -15,8 +15,92 @@
 
     <!-- page content -->
     <div class="right_col" role="main">
+        <div class="">
+         
+          <div class="page-title">
+            <div class="title_left">
+              <h3>Vendas</h3>
+            </div>
 
-    </div>
+            <div class="title_right">
+              <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search for...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Go!</button>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="clearfix"></div>
+
+          <div class="row">       
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="x_panel">
+                
+                <div class="x_title">
+                  <h2>Todas Vendas</h2>
+                  <ul class="nav navbar-right panel_toolbox">
+                    <li>
+                      <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Settings 1</a>
+                        </li>
+                        <li><a href="#">Settings 2</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div class="x_content">
+
+                  <table id="datatable" class="table table-striped table-bordered bulk_action">
+                      <thead>
+                        <tr>
+                          <th class="column-title">Venda ID</th>
+                          <th class="column-title">Entidade</th>
+                          <th class="column-title">Número Documento</th>
+                          <th class="column-title">Data</th>
+                          <th class="column-title">Total Mercadoria</th>
+                          <th class="column-title">Serie</th>
+                          <th class="column-title">Linhas Documento</th>
+                        </tr>
+                      </thead>
+
+                      <tbody>
+                        <% vendas.forEach(function(ven){ %>
+                          <tr>
+                            <td><a href="/vendas/<%= ven.id %>"><%= ven.id %></a></td>
+                            <td><%= ven.Entidade %></td>
+                            <td><%= ven.NumDoc %></td>
+                            <td><%= ven.Data %></td>
+                            <td><%= ven.TotalMerc %></td>
+                            <td><%= ven.Serie %></td>
+							<td>
+								<% (ven.LinhasDoc).forEach(function(lin){ %>
+									<%= lin.CodArtigo %>
+									&#9866;
+								<% }); %>
+							</td>
+                          </tr>
+                        <% }); %>
+                      </tbody>
+                    </table>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- /page content -->
 
   </div>
