--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -36,6 +36,7 @@
                       <li><a href="/vendas">Visão Geral</a></li>
                       <li><a href="/artigos">Artigos</a></li>
                       <li><a href="/clientes">Clientes</a></li>
+                      <li><a href="/vendas">Vendas</a></li>
                     </ul>
                   </li>
                 </ul>
