--- a/views/pages/fornecedores/index.ejs
+++ b/views/pages/fornecedores/index.ejs
@@ -98,7 +98,7 @@
                             <td><%= forn.Divida %></td>
 							<td><%= forn.NumContrib %></td>
 							<td><%= forn.ModoPag %></td>
-							<td><%= forn.EnderecoWeb %></td>
+							<td><a href="<%= forn.EnderecoWeb %>"><%= forn.EnderecoWeb %></a></td>
 							<td><%= forn.EncomendasPendentes %></td>
                           </tr>
                         <% }); %>
