--- a/views/pages/clientes/show.ejs
+++ b/views/pages/clientes/show.ejs
@@ -59,7 +59,8 @@
                 </div>
 
                 <div class="x_content">
-
+				 <div class="row">
+                                        <div class="col-xs-12 col-md-6">
 					<%= cliente.NomeCliente %>
 					<br>
 					<%= cliente.NumContribuinte %>
@@ -68,6 +69,12 @@
 					<br>
 					<%= cliente.Morada %>
 					<br>
+					<input type="hidden" id="address" value="<%= cliente.Morada %>">
+                                        </div>
+                                        <div class="col-xs-12 col-md-6">
+                                            <div id="map" style="height: 400px; width: 100%;"></div>
+                                        </div>
+                                    </div>
 
                 </div>
 
@@ -84,7 +91,8 @@
 </div>
 
 <% include ../../partials/footer %>
-
+<script src="/js/map.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYD9E2TQzUSIST7qw8ns3quQ2Ry-BDuh4&amp;libraries=places&amp;callback=initGoogleMaps" async="" defer=""></script>
 <% include ../../partials/post_footer %>
 </body>
 
