--- a/views/pages/fornecedores/show.ejs
+++ b/views/pages/fornecedores/show.ejs
@@ -8,94 +8,103 @@
 </head>
 
 <body class="nav-md">
-<div class="container body">
-  <div class="main_container">
-      <% include ../../partials/sidebar %>
-      <% include ../../partials/topnav %>
+    <div class="container body">
+        <div class="main_container">
+            <% include ../../partials/sidebar %>
+            <% include ../../partials/topnav %>
 
-      <div class="right_col" role="main">
-        <div class="">
-          <div class="page-title">
-            <div class="title_left">
-              <h3>Ver fornecedor</h3>
+            <div class="right_col" role="main">
+                <div class="">
+                    <div class="page-title">
+                        <div class="title_left">
+                            <h3>Ver fornecedor</h3>
+                        </div>
+
+                        <div class="title_right">
+                            <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Search for...">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button">Go!</button>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+
+                    <div class="row">
+
+                        <div class="col-md-12 col-sm-12 col-xs-12">
+                            <div class="x_panel">
+
+                                <div class="x_title">
+                                    <h2><%= fornecedor.CodFornecedor %></h2>
+                                    <ul class="nav navbar-right panel_toolbox">
+                                        <li>
+                                            <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                        </li>
+                                        <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                                            <ul class="dropdown-menu" role="menu">
+                                                <li>
+                                                    <a href="#">Settings 1</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#">Settings 2</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="x_content">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-md-6">
+                                            <%= fornecedor.Morada %>
+                                            <br>
+                                            <%= fornecedor.Local %>
+                                            <br>
+                                            <%= fornecedor.Cp %>
+                                            <br>
+                                            <%= fornecedor.Tel %>
+                                            <br>
+                                            <%= fornecedor.Divida %>
+                                            <br>
+                                            <%= fornecedor.NumContrib %>
+                                            <br>
+                                            <%= fornecedor.ModoPag %>
+                                            <br>
+                                            <%= fornecedor.EnderecoWeb %>
+                                            <br>
+                                            <%= fornecedor.EncomendasPendentes %>
+                                            <br>
+                                            <input type="hidden" id="address" value="<%= fornecedor.Morada %> <%= fornecedor.Local %>">
+                                        </div>
+                                        <div class="col-xs-12 col-md-6">
+                                            <div id="map" style="height: 400px; width: 100%;"></div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- /page content -->
+
             </div>
 
-            <div class="title_right">
-              <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Search for...">
-                  <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Go!</button>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="clearfix"></div>
-
-          <div class="row">       
-
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <div class="x_panel">
-                
-                <div class="x_title">
-                  <h2><%= fornecedor.CodFornecedor %></h2>
-                  <ul class="nav navbar-right panel_toolbox">
-                    <li>
-                      <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                    </li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Settings 1</a>
-                        </li>
-                        <li><a href="#">Settings 2</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                  <div class="clearfix"></div>
-                </div>
-
-                <div class="x_content">
-
-					<%= fornecedor.Morada %>
-					<br>
-					<%= fornecedor.Local %>
-					<br>
-					<%= fornecedor.Cp %>
-					<br>
-					<%= fornecedor.Tel %>
-					<br>
-					<%= fornecedor.Divida %>
-					<br>
-					<%= fornecedor.NumContrib %>
-					<br>
-					<%= fornecedor.ModoPag %>
-					<br>
-					<%= fornecedor.EnderecoWeb %>
-					<br>
-					<%= fornecedor.EncomendasPendentes %>
-					<br>
-
-                </div>
-
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-    <!-- /page content -->
-
-  </div>
-
-</div>
-
-<% include ../../partials/footer %>
-
-<% include ../../partials/post_footer %>
+    <% include ../../partials/footer %>
+    <script src="/js/map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYD9E2TQzUSIST7qw8ns3quQ2Ry-BDuh4&amp;libraries=places&amp;callback=initGoogleMaps" async="" defer=""></script>
+    <% include ../../partials/post_footer %>
 </body>
 
 </html>
