--- a/views/pages/vendas/show.ejs
+++ b/views/pages/vendas/show.ejs
@@ -34,50 +34,136 @@
 
           <div class="clearfix"></div>
 
-          <div class="row">       
+		  <div class="row">
+              <div class="col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    <h2><%= venda.InvoiceType %> <%= venda.InvoiceStatus %></h2>
+                    <ul class="nav navbar-right panel_toolbox">
+                      <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                      </li>
+                      <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                        <ul class="dropdown-menu" role="menu">
+                          <li><a href="#">Settings 1</a>
+                          </li>
+                          <li><a href="#">Settings 2</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li><a class="close-link"><i class="fa fa-close"></i></a>
+                      </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
 
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <div class="x_panel">
-                
-                <div class="x_title">
-                  <h2><%= venda.id %></h2>
-                  <ul class="nav navbar-right panel_toolbox">
-                    <li>
-                      <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                    </li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Settings 1</a>
-                        </li>
-                        <li><a href="#">Settings 2</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                  <div class="clearfix"></div>
+                    <section class="content invoice">
+                      <!-- title row -->
+                      <div class="row">
+                        <div class="col-xs-12 invoice-header">
+                          <h1>
+                                          <i class="fa fa-globe"></i> <%= venda.InvoiceNo %>
+                                          <small class="pull-right"><%= venda.InvoiceDate %></small>
+                                      </h1>
+                        </div>
+                        <!-- /.col -->
+                      </div>
+                      <!-- info row -->
+                      <div class="row invoice-info">
+                        <div class="col-sm-4 invoice-col">
+                          De
+                          <address>
+						  TODO INFORMACAO DA EMPRESA
+                                          <strong>Iron Admin, Inc.</strong>
+                                          <br>795 Freedom Ave, Suite 600
+                                          <br>New York, CA 94107
+                                          <br>Phone: 1 (804) 123-9876
+                                          <br>Email: ironadmin.com
+                                      </address>
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-sm-4 invoice-col">
+                          Para
+                          <address>
+                                          <a href="/clientes/<%= venda.CustomerID %>"><strong><%= venda.CustomerID %></strong></a>
+                                          <br>795 Freedom Ave, Suite 600
+                                          <br>New York, CA 94107
+                                          <br>Phone: 1 (804) 123-9876
+                                          <br>Email: jon@ironadmin.com
+                                      </address>
+                        </div>
+                        <!-- /.col -->
+                      </div>
+                      <!-- /.row -->
+
+                      <!-- Table row -->
+                      <div class="row">
+                        <div class="col-xs-12 table">
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>Qtd</th>
+                                <th>Produto</th>
+                                <th style="width: 59%">Description</th>
+                                <th>IVA</th>
+                                <th>Sub-total</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+							<% (venda.LinhasDoc).forEach(function(linha){ %>
+                            <tr>
+							<td><%= linha.Quantity %></td>
+                            <td><a href="/artigos/<%= linha.ProductCode %>"><%= linha.ProductCode %></a></td>
+                            <td><a href="/artigos/<%= linha.ProductCode %>"><%= linha.Description %></a></td>
+                            <td><%= linha.TaxPercentage %> %</td>
+                            <td class="text-right"><%= linha.UnitPrice %> &euro;</td>
+                          </tr>
+                        <% }); %>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!-- /.col -->
+                      </div>
+                      <!-- /.row -->
+
+                      <div class="row">
+                        <!-- accepted payments column -->
+                        <div class="col-xs-6">
+							<button class="btn btn-default btn-block" onclick="window.print();"><i class="fa fa-print"></i> Imprimir</button>
+                         <button class="btn btn-primary btn-block" style="margin-right: 5px;"><i class="fa fa-download"></i> Download PDF</button>
+                        </div>
+                        <!-- /.col -->
+                        <div class="col-xs-6">
+                          <div class="table-responsive">
+                            <table class="table">
+                              <tbody>
+                                <tr>
+                                  <th style="width:50%">Sub-total:</th>
+                                  <td class="text-right"><%= venda.NetTotal %> &euro;</td>
+                                </tr>
+                                <tr>
+                                  <th>IVA</th>
+                                  <td class="text-right"><%= venda.TaxPayable %> &euro;</td>
+                                </tr>
+                                <tr>
+                                  <th>Total:</th>
+                                  <td class="text-right"><%= venda.GrossTotal %> &euro;</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                        </div>
+                        <!-- /.col -->
+                      </div>
+                      <!-- /.row -->
+
+                    </section>
+                  </div>
                 </div>
-
-                <div class="x_content">
-
-					<%= venda.Entidade %>
-					<br>
-					<%= venda.NumDoc %>
-					<br>
-					<%= venda.Data %>
-					<br>
-					<%= venda.TotalMerc %>
-					<br>
-					<%= venda.Serie %>
-					<br>
-					<%= venda.LinhasDoc %>
-					<br>
-
-                </div>
-
               </div>
             </div>
-          </div>
+
         </div>
       </div>
 
