--- a/views/pages/fornecedores/show.ejs
+++ b/views/pages/fornecedores/show.ejs
@@ -3,7 +3,16 @@
 
 <head>
     <% include ../../partials/head %>
-
+    <!-- NProgress -->
+    <link href="/vendors/nprogress/nprogress.css" rel="stylesheet">
+    <!-- iCheck -->
+    <link href="/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <!-- Datatables -->
+    <link href="/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet">
+    <link href="/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet">
     <% include ../../partials/post_head %>
 </head>
 
@@ -36,26 +45,14 @@
 
                     <div class="row">
 
-                        <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-xs-12">
                             <div class="x_panel">
 
                                 <div class="x_title">
                                     <h2><%= fornecedor.CodFornecedor %></h2>
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li>
-                                            <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                            <ul class="dropdown-menu" role="menu">
-                                                <li>
-                                                    <a href="#">Settings 1</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Settings 2</a>
-                                                </li>
-                                            </ul>
-                                        </li>
+                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+                                        <li><a class="close-link"><i class="fa fa-close"></i></a></li>
                                     </ul>
                                     <div class="clearfix"></div>
                                 </div>
@@ -91,6 +88,103 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-xs-12">
+                            <div class="x_panel">
+
+                                <div class="x_title">
+                                    <h2><a href="/compras">Compras</a></h2>
+                                    <ul class="nav navbar-right panel_toolbox">
+                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+                                        <li><a class="close-link"><i class="fa fa-close"></i></a></li>
+                                    </ul>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="x_content">
+                                    <div class="row">
+                                        <table id="comprasTable" class="table table-striped table-bordered bulk_action">
+                                            <thead>
+                                                <tr>
+                                                    <th class="column-title">Venda ID</th>
+                                                    <th class="column-title">Entidade</th>
+                                                    <th class="column-title">Número Documento</th>
+                                                    <th class="column-title">Data</th>
+                                                    <th class="column-title">Total Mercadoria</th>
+                                                    <th class="column-title">Linhas Documento</th>
+                                                </tr>
+                                            </thead>
+
+                                            <tbody>
+                                                <% (fornecedor.compras).forEach(function(ven){ %>
+                                                <tr>
+                                                    <td><a href="/vendas/<%= ven.InvoiceNo %>"><%= ven.InvoiceNo %></a></td>
+                                                    <td><a href="/clientes/<%= ven.CustomerID %>"><%= ven.CustomerID %></a></td>
+                                                    <td><%= ven.NumDoc %></td>
+                                                    <td><%= ven.InvoiceDate %></td>
+                                                    <td><%= ven.GrossTotal %></td>
+                                                    <td>
+                                                        <% (ven.LinhasDoc).forEach(function(lin){ %>
+                                                        <%= lin.CodArtigo %>
+                                                        &#9866;
+                                                        <% }); %>
+                                                    </td>
+                                                </tr>
+                                                <% }); %>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12">
+                            <div class="x_panel">
+
+                                <div class="x_title">
+                                    <h2><a href="/artigos">Artigos</a></h2>
+                                    <ul class="nav navbar-right panel_toolbox">
+                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+                                        <li><a class="close-link"><i class="fa fa-close"></i></a></li>
+                                    </ul>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                                <div class="x_content">
+                                    <div class="row">
+                                        <table id="artigosTable" class="table table-striped table-bordered bulk_action">
+                                            <thead>
+                                                <tr>
+                                                    <!-- <th>
+                                  <input type="checkbox" id="check-all" class="flat">
+                                </th> -->
+                                                    <th class="column-title">Código </th>
+                                                    <th class="column-title">Descrição </th>
+                                                    <th class="column-title">STKAtual </th>
+                                                    <!--<th class="bulk-actions" colspan="7">
+                                   <a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>
+                                </th> -->
+                                                </tr>
+                                            </thead>
+
+                                            <tbody>
+                                                <% (fornecedor.artigos).forEach(function(art){ %>
+                                                <tr>
+                                                    <!-- <td class="a-center ">
+                                  <input type="checkbox" class="flat" name="table_records">
+                                </td> -->
+                                                    <td><a href="/artigos/<%= art.CodArtigo %>"><%= art.CodArtigo %></a></td>
+                                                    <td><a href="/artigos/<%= art.CodArtigo %>"><%= art.DescArtigo %></a></td>
+                                                    <td> <%= art.STKAtual %> </td>
+                                                </tr>
+                                                <% }); %>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
@@ -102,7 +196,26 @@
     </div>
 
     <% include ../../partials/footer %>
-    <script src="/js/map.js"></script>
+    <!-- FastClick -->
+    <script src="/vendors/fastclick/lib/fastclick.js"></script>
+    <!-- NProgress -->
+    <script src="/vendors/nprogress/nprogress.js"></script>
+    <!-- iCheck -->
+    <script src="/vendors/iCheck/icheck.min.js"></script>
+    <!-- Datatables -->
+    <script src="/vendors/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/buttons.flash.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="/vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js"></script>
+    <script src="/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js"></script>
+    <script src="/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
+    <script src="/vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
+	<script src="/js/map.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYD9E2TQzUSIST7qw8ns3quQ2Ry-BDuh4&amp;libraries=places&amp;callback=initGoogleMaps" async="" defer=""></script>
     <% include ../../partials/post_footer %>
 </body>
