small fix e encomendas no grafico do fornecedor

--- a/views/pages/clientes/show.ejs
+++ b/views/pages/clientes/show.ejs
@@ -232,7 +232,7 @@
 				data: {
 					labels:  ["Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"],
 					datasets: [{
-						label: '€',
+						label: 'Vendas (€)',
 						data: vendas_por_mes,
 						backgroundColor: 'rgba(255,140,0, 0.2)',
 						borderColor: 'rgba(255,140,0, 1)',
