--- a/views/pages/fornecedores/show.ejs
+++ b/views/pages/fornecedores/show.ejs
@@ -164,40 +164,40 @@
 								<div class="x_panel">
 									
 									<div class="x_title">
-									<h2><a href="/encomendas">Encomendas</a></h2>
-									<ul class="nav navbar-right panel_toolbox">
-										<li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
-										<li><a class="close-link"><i class="fa fa-close"></i></a></li>
-									</ul>
-									<div class="clearfix"></div>
-								</div>
-								
-								<div class="x_content">
-									<div class="row">
-										<table id="encomendasTable" class="table table-striped table-bordered bulk_action">
-											<thead>
-												<tr>
-													<th class="column-title">Cód. Encomenda</th>
-													<th class="column-title">Data</th>
-													<th class="column-title">Total Mercadoria</th>
-													<th class="column-title">Entregue</th>
-													
-												</tr>
-											</thead>
-											
-											<tbody>
-												<% (fornecedor.Encomendas).forEach(function(enc){ %>
-												<tr>
-													<td><a href="/encomendas/<%= enc.CodEncomenda %>"><%= enc.CodEncomenda %></a></td>
-													<td><%= enc.DataDoc %></td>
-													<td class="text-right"><%= enc.TotalMerc %></td>
-													<td><%= enc.Entregue %></td>
-												</tr>
-												<% }); %>
-											</tbody>										
-										</table>
+										<h2><a href="/encomendas">Encomendas</a></h2>
+										<ul class="nav navbar-right panel_toolbox">
+											<li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+											<li><a class="close-link"><i class="fa fa-close"></i></a></li>
+										</ul>
+										<div class="clearfix"></div>
 									</div>
-								</div>
+									
+									<div class="x_content">
+										<div class="row">
+											<table id="encomendasTable" class="table table-striped table-bordered bulk_action">
+												<thead>
+													<tr>
+														<th class="column-title">Cód. Encomenda</th>
+														<th class="column-title">Data</th>
+														<th class="column-title">Total Mercadoria</th>
+														<th class="column-title">Entregue</th>
+														
+													</tr>
+												</thead>
+												
+												<tbody>
+													<% (fornecedor.Encomendas).forEach(function(enc){ %>
+													<tr>
+														<td><a href="/encomendas/<%= enc.CodEncomenda %>"><%= enc.CodEncomenda %></a></td>
+														<td><%= enc.DataDoc %></td>
+														<td class="text-right"><%= enc.TotalMerc %></td>
+														<td><%= enc.Entregue %></td>
+													</tr>
+													<% }); %>
+												</tbody>										
+											</table>
+										</div>
+									</div>
 								</div>
 							</div>
 							
@@ -280,21 +280,35 @@
 			var compras = <%- JSON.stringify(fornecedor.Compras) %>;
 			var compras_por_mes = [0,0,0,0,0,0,0,0,0,0,0,0];
 			compras.forEach(function(compra){
-			var mes = moment(compra.Data).month();
-			compras_por_mes[mes] += parseFloat(compra.TotalMerc);
-		});
-		var ctx = document.getElementById("chart").getContext('2d');
-		var chart = new Chart(ctx, {
-			type: 'bar',
-			data: {
-				labels:  ["Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"],
-				datasets: [{
-					label: '€',
-					data: compras_por_mes,
-					backgroundColor: 'rgba(255,140,0, 0.2)',
-					borderColor: 'rgba(255,140,0, 1)',
+				var mes = moment(compra.Data).month();
+				compras_por_mes[mes] += parseFloat(compra.TotalMerc);
+			});
+			var encomendas = <%- JSON.stringify(fornecedor.Encomendas) %>;
+			var encomendas_por_mes = [0,0,0,0,0,0,0,0,0,0,0,0];
+			encomendas.forEach(function(encomenda){
+				var mes = moment(encomenda.DataDoc).month();
+				encomendas_por_mes[mes] += parseFloat(encomenda.TotalMerc);
+			});
+			var ctx = document.getElementById("chart").getContext('2d');
+			var chart = new Chart(ctx, {
+				type: 'bar',
+				data: {
+					labels:  ["Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"],
+					datasets: [{
+						label: 'Compras (€)',
+						data: compras_por_mes,
+						backgroundColor: 'rgba(255,140,0, 0.2)',
+						borderColor: 'rgba(255,140,0, 1)',
+						borderWidth: 1
+					},
+					{
+						label: 'Encomendas (€)',
+						data: encomendas_por_mes,
+					backgroundColor: 'rgba(255,215,0, 0.2)',
+					borderColor: 'rgba(255,215,0, 1)',
 					borderWidth: 1
-				}]
+				}
+				]
 			},
 			options: {
 				responsive: true,
