--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -2,7 +2,7 @@
 			<div class="col-md-3 left_col">
 			<div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="/" class="site_title"><i class="fa fa-tachometer"></i> <span>360º Dashboard</span></a>
+              <a href="/" class="site_title"><i class="fa fa-tachometer"></i> <span><%= login.company %></span></a>
             </div>
 
             <div class="clearfix"></div>
@@ -10,7 +10,7 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_info">
-                <span>Bem vindo,</span><h2>John Doe</h2>
+                <span>Bem vindo,</span><h2><%= login.user %></h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
