--- a/views/pages/vendas/index.ejs
+++ b/views/pages/vendas/index.ejs
@@ -35,8 +35,26 @@
 						<div class="clearfix"></div>
 						
 						<div class="row">       
+							<div class="col-xs-12">
+								<div class="x_panel">
+									
+									<div class="x_title">
+										<h2>Gráfico</h2>
+										<ul class="nav navbar-right panel_toolbox">
+											<li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+											<li><a class="close-link"><i class="fa fa-close"></i></a></li>
+										</ul>
+										<div class="clearfix"></div>
+									</div>
+									
+									<div class="x_content">
+										<canvas id="chart" height="250px"></canvas>
+									</div>
+									
+								</div>
+							</div>
 							
-							<div class="col-md-12 col-sm-12 col-xs-12">
+							<div class="col-xs-12">
 								<div class="x_panel">
 									
 									<div class="x_title">
@@ -50,7 +68,7 @@
 									
 									<div class="x_content">
 										
-										<table id="datatable" class="table table-striped table-bordered bulk_action">
+										<table id="vendasTable" class="table table-striped table-bordered bulk_action">
 											<thead>
 												<tr>
 													<th class="column-title">Venda ID</th>
@@ -99,6 +117,8 @@
 		<script src="/vendors/fastclick/lib/fastclick.js"></script>
 		<!-- NProgress -->
 		<script src="/vendors/nprogress/nprogress.js"></script>
+		<!-- Chart.js -->
+		<script src="/vendors/Chart.js/dist/Chart.min.js"></script>
 		<!-- iCheck -->
 		<script src="/vendors/iCheck/icheck.min.js"></script>
 		<!-- Datatables -->
@@ -114,9 +134,42 @@
 		<script src="/vendors/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
 		<script src="/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js"></script>
 		<script src="/vendors/datatables.net-scroller/js/dataTables.scroller.min.js"></script>
-		<script src="/vendors/jszip/dist/jszip.min.js"></script>
-		<script src="/vendors/pdfmake/build/pdfmake.min.js"></script>
-		<script src="/vendors/pdfmake/build/vfs_fonts.js"></script>
+		<!-- Moment -->
+		<script src="/vendors/moment/min/moment.min.js"></script>
+		<script>
+			$('#vendasTable').dataTable();
+			var vendas = <%- JSON.stringify(vendas) %>;
+			var vendas_por_mes = [0,0,0,0,0,0,0,0,0,0,0,0];
+			vendas.forEach(function(venda){
+			var mes = moment(venda.InvoiceDate).month();
+			vendas_por_mes[mes] += parseFloat(venda.GrossTotal);
+			});
+			var ctx = document.getElementById("chart").getContext('2d');
+			var chart = new Chart(ctx, {
+			type: 'line',
+			data: {
+			labels:  ["Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"],
+			datasets: [{
+			label: 'Vendas (€)',
+			data: vendas_por_mes,
+			backgroundColor: 'rgba(255,140,0, 0.2)',
+			borderColor: 'rgba(255,140,0, 1)',
+			borderWidth: 1
+			}]
+			},
+			options: {
+					responsive: true, 
+					maintainAspectRatio: false,
+					scales: {
+						yAxes: [{
+							ticks: {
+								beginAtZero:true
+							}
+						}]
+					}
+				}
+			});
+		</script>
 		<% include ../../partials/post_footer %>
 	</body>
 	
