--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,5 +7,8 @@
 
 <!-- jQuery -->
 <script src="/vendors/jquery/dist/jquery.min.js"></script>
+<!-- Moment -->
+<script src="/vendors/moment/min/moment.min.js"></script>
+<script src="/js/date.js"></script>
 <!-- Bootstrap -->
 <script src="/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
