--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -20,7 +20,7 @@
             <!-- sidebar menu -->
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
               <div class="menu_section">
-                <h3>Nome empresa</h3>
+                <h3><%= login.company %></h3>
                 <ul class="nav side-menu">
 				<li><a href="/"><i class="fa fa-home"></i> Home</span></a></li>
                   <li><a href="/ganhos"><i class="fa fa-line-chart"></i> Situação financeira</span></a></li>
